Updated for new bot

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-        <a href="https://slack.com/oauth/authorize?&client_id=224994577766.237977358084&scope=commands" class="btn">Add to Slack</a>
+        <a href="https://slack.com/oauth/authorize?client_id=395118514789.394280839600&scope=commands" class="btn">Add to Slack</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
